--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>여행 일정 선택 (최종 통합)</title>
   <style>
-    /* 가로 스크롤 방지 */
+    /* 박스 사이징 및 가로 스크롤 방지 */
+    *, *::before, *::after {
+      box-sizing: border-box;
+    }
     html, body {
+      margin: 0;
+      padding: 0;
       overflow-x: hidden;
     }
     body {
-      margin: 0;
       font-family: 'Segoe UI', sans-serif;
       background-color: #f4f8fb;
       padding-bottom: 80px;
@@ -109,13 +113,16 @@
     .price-banner span {
       color: #0984e3;
     }
+
+    /* 모바일 전용 레이아웃 */
     @media (max-width: 600px) {
+      .schedule-container {
+        padding: 20px 16px;
+      }
       .schedule-row {
-        display: flex;
         flex-direction: column;
         align-items: stretch;
         margin-bottom: 20px;
-        height: auto;
       }
       .time-button {
         writing-mode: horizontal-tb;
@@ -141,6 +148,7 @@
         padding: 10px 20px;
       }
     }
+
     .day-label-block {
       background: linear-gradient(90deg, #d0eaff, #ffffff);
       padding: 20px;
@@ -219,32 +227,26 @@
 </div>
 
 <script>
-  function formatKRW(value) { return new Intl.NumberFormat('ko-KR').format(value); }
-  document.addEventListener("DOMContentLoaded", function () {
-    const buttons = document.querySelectorAll(".option-button");
-    const totalKRW = document.getElementById("total-krw");
-    const totalUSD = document.getElementById("total-usd");
-    let selectedButtons = {};
-    buttons.forEach(btn => btn.addEventListener("click", function () {
-      const row = btn.closest(".schedule-row");
-      const key = row ? row.innerHTML.slice(0,50) : Math.random();
-      if(selectedButtons[key]) selectedButtons[key].classList.remove("selected");
-      selectedButtons[key] = btn;
-      btn.classList.add("selected");
+  function formatKRW(v){ return new Intl.NumberFormat('ko-KR').format(v); }
+  document.addEventListener("DOMContentLoaded",()=>{
+    const buttons=document.querySelectorAll(".option-button");
+    const totalKRW=document.getElementById("total-krw");
+    const totalUSD=document.getElementById("total-usd");
+    let selected={};
+    buttons.forEach(b=>b.addEventListener("click",()=>{
+      const row=b.closest(".schedule-row");
+      const key=row?row.innerHTML.slice(0,50):Math.random();
+      if(selected[key])selected[key].classList.remove("selected");
+      selected[key]=b; b.classList.add("selected");
       let kr=0, us=0;
-      Object.values(selectedButtons).forEach(x=>{ kr += parseInt(x.getAttribute("data-price-krw")||0); us += parseFloat(x.getAttribute("data-price-usd")||0); });
-      totalKRW.textContent = formatKRW(kr);
-      totalUSD.textContent = us.toFixed(2);
+      Object.values(selected).forEach(x=>{kr+=parseInt(x.getAttribute("data-price-krw")||0);us+=parseFloat(x.getAttribute("data-price-usd")||0);});
+      totalKRW.textContent=formatKRW(kr);totalUSD.textContent=us.toFixed(2);
     }));
-    const flights = document.querySelectorAll('.flight-option');
-    const extra = document.getElementById("day1-extra-schedule");
-    flights.forEach(b=>b.addEventListener("click",()=>{
-      flights.forEach(x=>x.classList.remove("selected")); b.classList.add("selected");
-      if(b.dataset.option==="day"){
-        extra.style.display="block"; setTimeout(()=>extra.classList.add("fade-in"),10);
-      } else {
-        extra.classList.remove("fade-in"); setTimeout(()=>extra.style.display="none",300);
-      }
+    const flights=document.querySelectorAll('.flight-option');
+    const extra=document.getElementById("day1-extra-schedule");
+    flights.forEach(f=>f.addEventListener("click",()=>{
+      flights.forEach(x=>x.classList.remove("selected"));f.classList.add("selected");
+      if(f.dataset.option==="day"){extra.style.display="block";setTimeout(()=>extra.classList.add("fade-in"),10);}else{extra.classList.remove("fade-in");setTimeout(()=>extra.style.display="none",300);}  
     }));
   });
 </script>
