--- a/index.html
+++ b/index.html
@@ -6,14 +6,8 @@
   <title>여행 일정 선택 (최종 통합)</title>
   <style>
     /* 박스 사이징 및 가로 스크롤 방지 */
-    *, *::before, *::after {
-      box-sizing: border-box;
-    }
-    html, body {
-      margin: 0;
-      padding: 0;
-      overflow-x: hidden;
-    }
+    *, *::before, *::after { box-sizing: border-box; }
+    html, body { margin: 0; padding: 0; overflow-x: hidden; }
     body {
       font-family: 'Segoe UI', sans-serif;
       background-color: #f4f8fb;
@@ -23,6 +17,7 @@
       max-width: 900px;
       margin: auto;
       padding: 40px 20px;
+      overflow-x: hidden;
     }
     .day-label {
       font-size: 20px;
@@ -35,6 +30,7 @@
       display: flex;
       margin-bottom: 20px;
       gap: 14px;
+      min-width: 0;
     }
     .time-button {
       flex: 0 0 100px;
@@ -50,12 +46,14 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      min-width: 0;
     }
     .option-buttons {
       flex: 1;
       display: flex;
       flex-direction: column;
       justify-content: stretch;
+      min-width: 0;
     }
     .option-button {
       background: #ffffff;
@@ -72,18 +70,16 @@
       display: flex;
       gap: 10px;
       align-items: center;
+      min-width: 0;
     }
     .option-button.selected {
       background-color: #d0eaff;
       border-color: #0984e3;
       color: #0984e3;
     }
-    .option-button:last-child {
-      margin-bottom: 0;
-    }
+    .option-button:last-child { margin-bottom: 0; }
     .image-placeholder {
-      width: 60px;
-      height: 60px;
+      width: 60px; height: 60px;
       background: #dfe6e9;
       border-radius: 8px;
       display: flex;
@@ -95,9 +91,7 @@
     }
     .price-banner {
       position: fixed;
-      bottom: 0;
-      left: 0;
-      right: 0;
+      bottom: 0; left: 0; right: 0;
       background: #ffffff;
       border-top: 2px solid #74b9ff;
       padding: 12px 20px;
@@ -110,19 +104,16 @@
       z-index: 1000;
       box-shadow: 0 -2px 5px rgba(0,0,0,0.1);
     }
-    .price-banner span {
-      color: #0984e3;
-    }
+    .price-banner span { color: #0984e3; }
 
     /* 모바일 전용 레이아웃 */
     @media (max-width: 600px) {
-      .schedule-container {
-        padding: 20px 16px;
-      }
+      .schedule-container { padding: 20px 24px; }
       .schedule-row {
         flex-direction: column;
         align-items: stretch;
         margin-bottom: 20px;
+        padding: 0 8px;
       }
       .time-button {
         writing-mode: horizontal-tb;
@@ -137,10 +128,7 @@
         flex-direction: column;
         gap: 10px;
       }
-      .option-button {
-        font-size: 15px;
-        padding: 12px;
-      }
+      .option-button { font-size: 15px; padding: 12px; }
       .price-banner {
         flex-direction: row;
         justify-content: space-between;
@@ -158,9 +146,7 @@
       box-shadow: 0 2px 6px rgba(0, 123, 255, 0.1);
     }
     .day-number {
-      font-size: 24px;
-      font-weight: 800;
-      color: #0077b6;
+      font-size: 24px; font-weight: 800; color: #0077b6;
     }
     .cpack-intro {
       background: #f1f9ff;
@@ -172,27 +158,15 @@
       box-shadow: 0 2px 6px rgba(0,123,255,0.1);
     }
     .cpack-intro h2 {
-      font-size: 24px;
-      color: #0077b6;
-      margin-bottom: 16px;
-      text-align: center;
+      font-size: 24px; color: #0077b6; margin-bottom: 16px; text-align: center;
     }
-    .cpack-intro ul {
-      list-style: none;
-      padding-left: 0;
-    }
+    .cpack-intro ul { list-style: none; padding-left: 0; }
     .cpack-intro li {
-      font-size: 16px;
-      margin: 12px 0;
-      padding-left: 20px;
-      position: relative;
-      color: #2d3436;
+      font-size: 16px; margin: 12px 0; padding-left: 20px;
+      position: relative; color: #2d3436;
     }
     .cpack-intro li::before {
-      content: "✔";
-      position: absolute;
-      left: 0;
-      color: #00b894;
+      content: "✔"; position: absolute; left: 0; color: #00b894;
     }
     .fade-in {
       animation: fadeSlideIn 0.5s ease forwards;
@@ -205,51 +179,51 @@
 </head>
 <body>
 
-<div class="cpack-intro">
-  <h2>C-Pack이란?</h2>
-  <ul>
-    <li><strong>내 마음대로</strong> 일정을 구성할 수 있어요.</li>
-    <li><strong>호텔도 자유롭게</strong> 직접 선택 가능해요.</li>
-    <li><strong>정해진 식사?</strong> 없습니다. 현지 맛집에서 자유롭게 즐기세요.</li>
-    <li><strong>현지 전문가</strong>가 당신의 여행을 직접 설계합니다.</li>
-    <li><strong>프리미엄 단독 투어</strong>를 패키지 가격에 제공합니다.</li>
-    <li><strong>팁, 쇼핑, 선택관광</strong> 강요는 이제 그만!</li>
-  </ul>
-</div>
+  <div class="cpack-intro">
+    <h2>C-Pack이란?</h2>
+    <ul>
+      <li><strong>내 마음대로</strong> 일정을 구성할 수 있어요.</li>
+      <li><strong>호텔도 자유롭게</strong> 직접 선택 가능해요.</li>
+      <li><strong>정해진 식사?</strong> 없습니다. 현지 맛집에서 자유롭게 즐기세요.</li>
+      <li><strong>현지 전문가</strong>가 당신의 여행을 직접 설계합니다.</li>
+      <li><strong>프리미엄 단독 투어</strong>를 패키지 가격에 제공합니다.</li>
+      <li><strong>팁, 쇼핑, 선택관광</strong> 강요는 이제 그만!</li>
+    </ul>
+  </div>
 
-<div class="schedule-container">
-  <!-- 1일차 ~ 5일차 일정 전체 내용을 여기에 그대로 복사 붙여넣으세요 -->
-</div>
+  <div class="schedule-container">
+    <!-- 1일차 ~ 5일차 일정 전체 내용을 여기에 그대로 복사 붙여넣으세요 -->
+  </div>
 
-<div class="price-banner">
-  <div>결제하실 금액 (₩): <span id="total-krw">0</span></div>
-  <div>현장 결제하실 금액 ($): <span id="total-usd">0</span></div>
-</div>
+  <div class="price-banner">
+    <div>결제하실 금액 (₩): <span id="total-krw">0</span></div>
+    <div>현장 결제하실 금액 ($): <span id="total-usd">0</span></div>
+  </div>
 
-<script>
-  function formatKRW(v){ return new Intl.NumberFormat('ko-KR').format(v); }
-  document.addEventListener("DOMContentLoaded",()=>{
-    const buttons=document.querySelectorAll(".option-button");
-    const totalKRW=document.getElementById("total-krw");
-    const totalUSD=document.getElementById("total-usd");
-    let selected={};
-    buttons.forEach(b=>b.addEventListener("click",()=>{
-      const row=b.closest(".schedule-row");
-      const key=row?row.innerHTML.slice(0,50):Math.random();
-      if(selected[key])selected[key].classList.remove("selected");
-      selected[key]=b; b.classList.add("selected");
-      let kr=0, us=0;
-      Object.values(selected).forEach(x=>{kr+=parseInt(x.getAttribute("data-price-krw")||0);us+=parseFloat(x.getAttribute("data-price-usd")||0);});
-      totalKRW.textContent=formatKRW(kr);totalUSD.textContent=us.toFixed(2);
-    }));
-    const flights=document.querySelectorAll('.flight-option');
-    const extra=document.getElementById("day1-extra-schedule");
-    flights.forEach(f=>f.addEventListener("click",()=>{
-      flights.forEach(x=>x.classList.remove("selected"));f.classList.add("selected");
-      if(f.dataset.option==="day"){extra.style.display="block";setTimeout(()=>extra.classList.add("fade-in"),10);}else{extra.classList.remove("fade-in");setTimeout(()=>extra.style.display="none",300);}  
-    }));
-  });
-</script>
+  <script>
+    function formatKRW(v){ return new Intl.NumberFormat('ko-KR').format(v); }
+    document.addEventListener("DOMContentLoaded",()=>{
+      const buttons=document.querySelectorAll(".option-button");
+      const totalKRW=document.getElementById("total-krw");
+      const totalUSD=document.getElementById("total-usd");
+      let selected={};
+      buttons.forEach(b=>b.addEventListener("click",()=>{
+        const row=b.closest(".schedule-row");
+        const key=row?row.innerHTML.slice(0,50):Math.random();
+        if(selected[key])selected[key].classList.remove("selected");
+        selected[key]=b; b.classList.add("selected");
+        let kr=0, us=0;
+        Object.values(selected).forEach(x=>{kr+=parseInt(x.getAttribute("data-price-krw")||0);us+=parseFloat(x.getAttribute("data-price-usd")||0);});
+        totalKRW.textContent=formatKRW(kr);totalUSD.textContent=us.toFixed(2);
+      }));
+      const flights=document.querySelectorAll('.flight-option');
+      const extra=document.getElementById("day1-extra-schedule");
+      flights.forEach(f=>f.addEventListener("click",()=>{
+        flights.forEach(x=>x.classList.remove("selected"));f.classList.add("selected");
+        if(f.dataset.option==="day"){extra.style.display="block";setTimeout(()=>extra.classList.add("fade-in"),10);}else{extra.classList.remove("fade-in");setTimeout(()=>extra.style.display="none",300);}  
+      }));
+    });
+  </script>
 
 </body>
 </html>
