--- a/index.html
+++ b/index.html
@@ -1026,6 +1026,6 @@ document.addEventListener("DOMContentLoaded", function () {
   });
 });
 </script>
-
+<script src="https://unpkg.com/iframe-resizer/js/iframeResizer.contentWindow.min.js"></script>
 </body>
 </html>
