--- a/index.html
+++ b/index.html
@@ -9,92 +9,93 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: #f4f8fb;
+      background: #f4f8fb !important;
     }
     .schedule-container {
       max-width: 800px;
       margin: 0 auto;
       padding: 24px 16px;
+      background-color: white !important;
     }
     .day-label-block {
-      background: #d0eaff;
-      border-radius: 12px;
-      padding: 14px 18px;
-      margin: 24px 0 12px;
-      font-size: 18px;
-      font-weight: 600;
-      color: #2d3436;
+      background: #d0eaff !important;
+      border-radius: 12px !important;
+      padding: 14px 18px !important;
+      margin: 24px 0 12px !important;
+      font-size: 18px !important;
+      font-weight: 600 !important;
+      color: #2d3436 !important;
     }
     .schedule-row {
-      display: flex;
-      flex-wrap: nowrap;
-      gap: 12px;
-      margin-bottom: 24px;
-      align-items: stretch;
+      display: flex !important;
+      flex-wrap: nowrap !important;
+      gap: 12px !important;
+      margin-bottom: 24px !important;
+      align-items: stretch !important;
     }
     .time-button {
-      flex: 0 0 100px;
-      background: #dff1ff;
-      border: 2px solid #74b9ff;
-      border-radius: 14px;
-      font-weight: bold;
-      font-size: 14px;
-      padding: 12px 10px;
-      color: #0077b6;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      min-height: 160px;
+      flex: 0 0 100px !important;
+      background: #dff1ff !important;
+      border: 2px solid #74b9ff !important;
+      border-radius: 14px !important;
+      font-weight: bold !important;
+      font-size: 14px !important;
+      padding: 12px 10px !important;
+      color: #0077b6 !important;
+      display: flex !important;
+      justify-content: center !important;
+      align-items: center !important;
+      text-align: center !important;
+      min-height: 160px !important;
     }
     .option-buttons {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      gap: 12px;
+      flex: 1 !important;
+      display: flex !important;
+      flex-direction: column !important;
+      gap: 12px !important;
     }
     .option-button {
-      display: flex;
-      gap: 12px;
-      align-items: center;
-      background: #ffffff;
-      border: 1px solid #ced6e0;
-      border-radius: 10px;
-      padding: 14px;
-      font-size: 15px;
-      font-weight: 500;
-      cursor: pointer;
-      transition: 0.2s;
+      display: flex !important;
+      gap: 12px !important;
+      align-items: center !important;
+      background: #ffffff !important;
+      border: 1px solid #ced6e0 !important;
+      border-radius: 10px !important;
+      padding: 14px !important;
+      font-size: 15px !important;
+      font-weight: 500 !important;
+      cursor: pointer !important;
+      transition: 0.2s !important;
     }
     .option-button:hover {
-      background-color: #e3f4ff;
-      border-color: #74b9ff;
+      background-color: #e3f4ff !important;
+      border-color: #74b9ff !important;
     }
     .image-placeholder {
-      width: 48px;
-      height: 48px;
-      background: #dcdde1;
-      border-radius: 8px;
-      flex-shrink: 0;
+      width: 48px !important;
+      height: 48px !important;
+      background: #dcdde1 !important;
+      border-radius: 8px !important;
+      flex-shrink: 0 !important;
     }
     @media (max-width: 768px) {
       .schedule-row {
-        flex-direction: column;
+        flex-direction: column !important;
       }
       .time-button {
-        flex: 1 1 100%;
-        min-height: auto;
+        flex: 1 1 100% !important;
+        min-height: auto !important;
       }
     }
     @media (max-width: 480px) {
       .option-button {
-        flex-direction: column;
-        align-items: flex-start;
+        flex-direction: column !important;
+        align-items: flex-start !important;
       }
       .image-placeholder {
-        width: 100%;
-        height: 160px;
-        border-radius: 10px;
+        width: 100% !important;
+        height: 160px !important;
+        border-radius: 10px !important;
       }
     }
   </style>
